Fix DP superseded-root receipt accounting